Fix bug and add initial dark mode toggle code

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,3 +49,8 @@
     font-weight: bold;
     font-size: 10px;
 }
+
+.darkMode {
+    background-color: #333;
+    color: #fff; 
+}
